# digiplay_legacy

./: .gitignore  AUTHORS  CMakeLists.txt  INSTALL  Makefile  Makefile.settings  README  VERSION  tar-exclude
src/: ArchiveManager.cpp  ArchiveManager.h  Auth.cpp  Auth.h  AuthLdap.cpp  AuthLdap.h  AuthPsql.cpp  AuthPsql.h  CMakeLists.txt  Config.cpp  Config.h  DataAccess.cpp  DataAccess.h  DbDefine.h  DbTrigger.cpp  DbTrigger.h  DpsEmail.cpp  DpsEmail.h  DpsLdap.h  DpsMusicLog.cpp  DpsMusicLog.h  DpsMusicSearch.cpp  DpsMusicSearch.h  DpsObject.cpp  DpsObject.h  DpsResources.qrc  Exception.h  FLACdecompress.cpp  FLACdecompress.h  FindFLAC++.cmake  FindJack.cmake  FindMPG123.cmake  FindPqxx.cmake  GroupManager.cpp  GroupManager.h  LocationManager.cpp  LocationManager.h  Logger.cpp  Logger.h  Makefile  (+57 more)
src/admin/: Makefile  admin.pro  frmAdminAddMusic.ui  frmAdminAddMusic.ui.h  frmAdminEditNewInfo.ui.h
src/admintools/: Makefile  dpsimport.cpp
src/audio/: Audio.h  AudioLib.h  AudioPacket.cpp  AudioPacket.h  CircularCache.cpp  CircularCache.h  Component.cpp  Component.h  Counter.cpp  Counter.h  CounterTrigger.cpp  CounterTrigger.h  Input.cpp  Input.h  InputFlac.cpp  InputFlac.h  InputMp3.cpp  InputMp3.h  InputRaw.cpp  InputRaw.h  Makefile  Output.cpp  Output.h  OutputDsp.cpp  OutputDsp.h  OutputPlayer.cpp  OutputPlayer.h  OutputRaw.cpp  OutputRaw.h  OutputSO_alsa.cpp  OutputSO_jack.cpp  OutputSO_oss.cpp  Process.h  ProcessFader.cpp  ProcessFader.h  ProcessLink.cpp  ProcessLink.h  ProcessMixer.cpp  ProcessMixer.h  Thread.cpp  (+2 more)
src/audioflac/: CMakeLists.txt  Makefile  audioflac.cpp
src/audiolib/: Audio.h  AudioPacket.cpp  AudioPacket.h  CMakeLists.txt  CircularCache.cpp  CircularCache.h  Component.cpp  Component.h  ComponentAudio.cpp  ComponentAudio.h  ComponentMonitor.cpp  ComponentMonitor.h  Counter.h  CounterTrigger.cpp  Input.cpp  Input.h  InputFile.cpp  InputFile.h  Makefile  Output.h  OutputDsp.cpp  OutputDsp.h  OutputFile.cpp  OutputFile.h  Process.cpp  Process.h  ProcessFader.cpp  ProcessLink.cpp  ProcessLink.h  ProcessMixer.cpp  doxygen.conf
src/audiolib/alsa/: CMakeLists.txt  Makefile  OutputDspAlsa.cpp  OutputDspAlsa.h
src/audiolib/flac/: CMakeLists.txt  InputFlac.cpp  InputFlac.h  Makefile
src/audiolib/jack/: CMakeLists.txt  Makefile  OutputDspJack.cpp  OutputDspJack.h
src/audiolib/mp3/: CMakeLists.txt  InputMp3.cpp  InputMp3.h  Makefile
src/audiolib/oss/: CMakeLists.txt  Makefile  OutputDspOss.cpp  OutputDspOss.h
src/audiolib/raw/: CMakeLists.txt  InputFileRaw.cpp  InputFileRaw.h  Makefile  OutputFileRaw.cpp  OutputFileRaw.h
src/audioplay/: CMakeLists.txt  Makefile  audioplay.cpp
src/audiotest/: CMakeLists.txt  Makefile  audiotest.cpp
src/db/: Makefile  audio.dia  audiosets.dia  cartsets.dia  digiplay.dia  dps.c  scripts.dia  showplans.dia  sustainer.dia  usersgroupsdir.dia  website.dia
src/db/migration/: README
src/db/sql/: clear_table.sql  digibackup.sql  newdb.sql  newdb_noFK.sql  seq_list.sql  table_list.sql
src/dps/: Dps.h  DpsAudioItem.cpp  DpsAudioItem.h  DpsDate.cpp  DpsDate.h  DpsGroup.cpp  DpsGroup.h  DpsHash.cpp  DpsHash.h  DpsObject.cpp  DpsObject.h  DpsScriptItem.cpp  DpsScriptItem.h  DpsShowItem.cpp  DpsShowItem.h  DpsShowPlan.cpp  DpsShowPlan.h  DpsTime.cpp  DpsTime.h  DpsUser.cpp  DpsUser.h
src/dpsadmin/: CMakeLists.txt  Makefile  dpsadmin.cpp
src/playin/: CMakeLists.txt  Makefile  main.c  main.cpp  md5.c
src/service_layer/: .classpath  .project  .springBeans
src/service_layer/etc/: logback.xml  server-beans-hsqldb.xml  server-beans.xml  test-server-beans-hsqldb.xml
src/service_layer/testdb/: digiplaynew.properties  digiplaynew.script
src/studio_manage/: CMakeLists.txt  FileBrowser.cpp  FileBrowser.h  FileBrowserItem.cpp  FileBrowserItem.h  Makefile  Nownext.cpp  Nownext.h  ShowPlanAudio.cpp  ShowPlanAudio.h  ShowPlanItem.cpp  ShowPlanItem.h  ShowPlanScript.cpp  ShowPlanScript.h  Showplan.cpp  Showplan.h  ShowplanDelegate.cpp  ShowplanDelegate.h  ShowplanModel.cpp  ShowplanModel.h  ShowplanView.cpp  ShowplanView.h  TabPanel.cpp  TabPanel.h  TabPanelCart.cpp  TabPanelCart.h  TabPanelEmail.cpp  TabPanelEmail.h  TabPanelFileBrowser.cpp  TabPanelFileBrowser.h  TabPanelInfo.cpp  TabPanelInfo.h  TabPanelLogging.cpp  TabPanelLogging.h  TabPanelPlaylist.cpp  TabPanelPlaylist.h  TabPanelScript.cpp  TabPanelScript.h  TabPanelSearch.cpp  TabPanelSearch.h  (+16 more)
src/studio_play/: AudioPlayer.cpp  AudioPlayer.h  AudioWall.cpp  AudioWall.h  AudioWallDriver.cpp  AudioWallDriver.h  AudioWallItem.cpp  AudioWallItem.h  AudioWallManager.cpp  AudioWallManager.h  CMakeLists.txt  Makefile  RemoteStartThread.cpp  RemoteStartThread.h  frmPlayout.cpp  frmPlayout.h  frmPlayout.ui  frmPlayout.ui.h  main.cpp  studio_play.pro
src/sueplay/: CMakeLists.txt  Makefile  sueplay.cpp
src/suesched/: CMakeLists.txt  Makefile  sched_bin.cpp  sched_bin.h  schedule.cpp  schedule.h  scheduler.cpp  scheduler.h  suesched.cpp
src/tools/: FLACcompress.cpp  FLACtest.cpp  Makefile  Makefile.FLACcompress  Makefile.FLACtest  Makefile.dpsadmin  Makefile.dpsarchive  Makefile.dpsexport  Makefile.dpsexport_history  Makefile.dpsexport_sust  Makefile.dpsimport  Makefile.dpsimport_history  Makefile.dpsimport_sust  dpsadmin.cpp  dpsarchive.cpp  dpsexport.cpp  dpsexport_history.cpp  dpsexport_sust.cpp  dpsimport.cpp  dpsimport_history.cpp  dpsimport_sust.cpp
src/www/: config.php  config.php.template  index.php  out.html
src/www/Auth/: Auth.class.php  Auth.class.php.bk  AuthBase.class.php  AuthDB.class.php  AuthInterface.class.php  AuthUtil.class.php  AuthUtil.class.php.bk  AuthUtilBase.class.php  AuthUtilDB.class.php  config-tests.php  config.php  config.php.template  configDB.php  configLDAP.php
src/www/CMS/: CMS.class.php  cmsconfig.js  config-tests.php  config.php  config.php.template
src/www/DBAL/: BasicGenericObjectCollection.class.php  Database.class.php  config-tests.php  config.php  config.php.template
src/www/DPS/: DPS.class.php  config.php  config.php.template  dpswebimport.pl  encode-digiplay-file.sh  stylesheet.css
src/www/FCKeditor/: _whatsnew.html  (+6 more)
(+1113 files in other folders)
